# glyph

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: clap.rs  header.txt  simple.rs  stateful_prompt.rs
src/: history.rs  input.rs  lib.rs  persistence.rs
src/input/: params.rs
