[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
bytes = "*"

[dependencies.clap]
version = "4.3"
features = ["derive"]

[[example]]
name = "simple"

[[example]]
name = "clap"